exports[`RightPanel Layout should render a loading state 1`] = `
<RightPanel
  changeYear={[Function]}
  data={
    Object {
      "accounts": Object {
        "Christmas Offering": 0,
        "General Fund": 66,
        "Step Up Fund": 0,
      },
      "chartData": Array [
        Object {
          "amount": 0,
          "month": "January",
          "tick": "J",
        },
        Object {
          "amount": 11,
          "month": "February",
          "tick": "F",
        },
        Object {
          "amount": 0,
          "month": "March",
          "tick": "M",
        },
        Object {
          "amount": 9,
          "month": "April",
          "tick": "A",
        },
        Object {
          "amount": 18,
          "month": "May",
          "tick": "M",
        },
        Object {
          "amount": 7,
          "month": "June",
          "tick": "J",
        },
        Object {
          "amount": 6,
          "month": "July",
          "tick": "J",
        },
        Object {
          "amount": 5,
          "month": "August",
          "tick": "A",
        },
        Object {
          "amount": 4,
          "month": "September",
          "tick": "S",
        },
        Object {
          "amount": 3,
          "month": "October",
          "tick": "O",
        },
        Object {
          "amount": 2,
          "month": "November",
          "tick": "N",
        },
        Object {
          "amount": 1,
          "month": "December",
          "tick": "D",
        },
      ],
      "total": 66,
    }
  }
  loading={true}>
  <div
    className="scrollable locked-ends locked-sides background--primary soft-double-sides soft-double-top">
    <div
      className="push-double-top display-inline-block soft-double-ends soft-double-right one-whole">
      <h3
        className="text-light-primary outlined--bottom soft-half-bottom"
        style={
          Object {
            "borderBottom": "1px solid",
            "paddingTop": "15px",
          }
        }>
        Year In Review
      </h3>
      <div
        className="display-inline-block">
        <p
          className="text-light-primary display-inline-block soft-half-right">
          <small>
            <em>
              See your summary from
            </em>
          </small>
        </p>
        <style>
          .right-select select { color: #ffffff } .right-select:after {border-color: #ffffff transparent transparent} .right-select select option { color: #505050 }
        </style>
        <Select
          classes={
            Array [
              "right-select",
              "hard",
              "flush",
              "display-inline-block",
            ]
          }
          hideLabel={true}
          inputClasses="outlined--dotted outlined--light text-light-primary h6 hard-top flush-bottom"
          items={
            Array [
              Object {
                "label": 2017,
                "value": 2017,
              },
              Object {
                "label": 2016,
                "value": 2016,
              },
              Object {
                "label": 2015,
                "value": 2015,
              },
              Object {
                "label": 2014,
                "value": 2014,
              },
              Object {
                "label": 2013,
                "value": 2013,
              },
              Object {
                "label": 2012,
                "value": 2012,
              },
              Object {
                "label": 2011,
                "value": 2011,
              },
              Object {
                "label": 2010,
                "value": 2010,
              },
              Object {
                "label": 2009,
                "value": 2009,
              },
              Object {
                "label": 2008,
                "value": 2008,
              },
            ]
          }
          onChange={[Function]}>
          <div
            className="input right-select hard flush display-inline-block select_lvcpjl">
            <select
              className="outlined--dotted outlined--light text-light-primary h6 hard-top flush-bottom"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}>
              <option
                value={2017}>
                2017
              </option>
              <option
                value={2016}>
                2016
              </option>
              <option
                value={2015}>
                2015
              </option>
              <option
                value={2014}>
                2014
              </option>
              <option
                value={2013}>
                2013
              </option>
              <option
                value={2012}>
                2012
              </option>
              <option
                value={2011}>
                2011
              </option>
              <option
                value={2010}>
                2010
              </option>
              <option
                value={2009}>
                2009
              </option>
              <option
                value={2008}>
                2008
              </option>
            </select>
          </div>
        </Select>
      </div>
      <div
        className="soft-double one-whole text-center">
        <Spinner
          styles={
            Object {
              "borderColor": "#fff #6BAC43 #fff #fff",
              "borderWidth": "7px",
            }
          }>
          <div
            className="loader_9h6gj"
            style={
              Object {
                "borderColor": "#fff #6BAC43 #fff #fff",
                "borderWidth": "7px",
              }
            } />
        </Spinner>
      </div>
    </div>
  </div>
</RightPanel>
`;

exports[`RightPanel Layout should render with data 1`] = `
<RightPanel
  changeYear={[Function]}
  data={
    Object {
      "accounts": Object {
        "Christmas Offering": 0,
        "General Fund": 66,
        "Step Up Fund": 0,
      },
      "chartData": Array [
        Object {
          "amount": 0,
          "month": "January",
          "tick": "J",
        },
        Object {
          "amount": 11,
          "month": "February",
          "tick": "F",
        },
        Object {
          "amount": 0,
          "month": "March",
          "tick": "M",
        },
        Object {
          "amount": 9,
          "month": "April",
          "tick": "A",
        },
        Object {
          "amount": 18,
          "month": "May",
          "tick": "M",
        },
        Object {
          "amount": 7,
          "month": "June",
          "tick": "J",
        },
        Object {
          "amount": 6,
          "month": "July",
          "tick": "J",
        },
        Object {
          "amount": 5,
          "month": "August",
          "tick": "A",
        },
        Object {
          "amount": 4,
          "month": "September",
          "tick": "S",
        },
        Object {
          "amount": 3,
          "month": "October",
          "tick": "O",
        },
        Object {
          "amount": 2,
          "month": "November",
          "tick": "N",
        },
        Object {
          "amount": 1,
          "month": "December",
          "tick": "D",
        },
      ],
      "total": 66,
    }
  }
  loading={false}>
  <div
    className="scrollable locked-ends locked-sides background--primary soft-double-sides soft-double-top">
    <div
      className="push-double-top display-inline-block soft-double-ends soft-double-right one-whole">
      <h3
        className="text-light-primary outlined--bottom soft-half-bottom"
        style={
          Object {
            "borderBottom": "1px solid",
            "paddingTop": "15px",
          }
        }>
        Year In Review
      </h3>
      <div
        className="display-inline-block">
        <p
          className="text-light-primary display-inline-block soft-half-right">
          <small>
            <em>
              See your summary from
            </em>
          </small>
        </p>
        <style>
          .right-select select { color: #ffffff } .right-select:after {border-color: #ffffff transparent transparent} .right-select select option { color: #505050 }
        </style>
        <Select
          classes={
            Array [
              "right-select",
              "hard",
              "flush",
              "display-inline-block",
            ]
          }
          hideLabel={true}
          inputClasses="outlined--dotted outlined--light text-light-primary h6 hard-top flush-bottom"
          items={
            Array [
              Object {
                "label": 2017,
                "value": 2017,
              },
              Object {
                "label": 2016,
                "value": 2016,
              },
              Object {
                "label": 2015,
                "value": 2015,
              },
              Object {
                "label": 2014,
                "value": 2014,
              },
              Object {
                "label": 2013,
                "value": 2013,
              },
              Object {
                "label": 2012,
                "value": 2012,
              },
              Object {
                "label": 2011,
                "value": 2011,
              },
              Object {
                "label": 2010,
                "value": 2010,
              },
              Object {
                "label": 2009,
                "value": 2009,
              },
              Object {
                "label": 2008,
                "value": 2008,
              },
            ]
          }
          onChange={[Function]}>
          <div
            className="input right-select hard flush display-inline-block select_lvcpjl">
            <select
              className="outlined--dotted outlined--light text-light-primary h6 hard-top flush-bottom"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}>
              <option
                value={2017}>
                2017
              </option>
              <option
                value={2016}>
                2016
              </option>
              <option
                value={2015}>
                2015
              </option>
              <option
                value={2014}>
                2014
              </option>
              <option
                value={2013}>
                2013
              </option>
              <option
                value={2012}>
                2012
              </option>
              <option
                value={2011}>
                2011
              </option>
              <option
                value={2010}>
                2010
              </option>
              <option
                value={2009}>
                2009
              </option>
              <option
                value={2008}>
                2008
              </option>
            </select>
          </div>
        </Select>
      </div>
      <div>
        <mockConstructor
          data={
            Object {
              "accounts": Object {
                "Christmas Offering": 0,
                "General Fund": 66,
                "Step Up Fund": 0,
              },
              "chartData": Array [
                Object {
                  "amount": 0,
                  "month": "January",
                  "tick": "J",
                },
                Object {
                  "amount": 11,
                  "month": "February",
                  "tick": "F",
                },
                Object {
                  "amount": 0,
                  "month": "March",
                  "tick": "M",
                },
                Object {
                  "amount": 9,
                  "month": "April",
                  "tick": "A",
                },
                Object {
                  "amount": 18,
                  "month": "May",
                  "tick": "M",
                },
                Object {
                  "amount": 7,
                  "month": "June",
                  "tick": "J",
                },
                Object {
                  "amount": 6,
                  "month": "July",
                  "tick": "J",
                },
                Object {
                  "amount": 5,
                  "month": "August",
                  "tick": "A",
                },
                Object {
                  "amount": 4,
                  "month": "September",
                  "tick": "S",
                },
                Object {
                  "amount": 3,
                  "month": "October",
                  "tick": "O",
                },
                Object {
                  "amount": 2,
                  "month": "November",
                  "tick": "N",
                },
                Object {
                  "amount": 1,
                  "month": "December",
                  "tick": "D",
                },
              ],
              "total": 66,
            }
          }
          linkUrl="/give/history">
          <div
            id="YTDMetrics" />
        </mockConstructor>
        <div
          className="push-ends soft-ends" />
        <FundBreakdown
          data={
            Object {
              "accounts": Object {
                "Christmas Offering": 0,
                "General Fund": 66,
                "Step Up Fund": 0,
              },
              "chartData": Array [
                Object {
                  "amount": 0,
                  "month": "January",
                  "tick": "J",
                },
                Object {
                  "amount": 11,
                  "month": "February",
                  "tick": "F",
                },
                Object {
                  "amount": 0,
                  "month": "March",
                  "tick": "M",
                },
                Object {
                  "amount": 9,
                  "month": "April",
                  "tick": "A",
                },
                Object {
                  "amount": 18,
                  "month": "May",
                  "tick": "M",
                },
                Object {
                  "amount": 7,
                  "month": "June",
                  "tick": "J",
                },
                Object {
                  "amount": 6,
                  "month": "July",
                  "tick": "J",
                },
                Object {
                  "amount": 5,
                  "month": "August",
                  "tick": "A",
                },
                Object {
                  "amount": 4,
                  "month": "September",
                  "tick": "S",
                },
                Object {
                  "amount": 3,
                  "month": "October",
                  "tick": "O",
                },
                Object {
                  "amount": 2,
                  "month": "November",
                  "tick": "N",
                },
                Object {
                  "amount": 1,
                  "month": "December",
                  "tick": "D",
                },
              ],
              "total": 66,
            }
          }>
          <div>
            <h3
              className="text-light-primary soft-half-bottom push-double-bottom"
              style={
                Object {
                  "borderBottom": "1px solid",
                }
              }>
              Fund Breakdown
            </h3>
            <div
              className="push-bottom">
              <Progress
                percentDone={100}
                style={Object {}}
                theme=""
                title="General Fund"
                total={66}>
                <div
                  style={
                    Object {
                      "color": "#fff",
                    }
                  }>
                  <div
                    className="floating floating--left one-half display-inline-block push-half-top"
                    style={
                      Object {
                        "verticalAlign": "middle",
                      }
                    }>
                    <h5
                      className="floating__item"
                      data-spec="title">
                      General Fund
                    </h5>
                  </div>
                  <div
                    className="floating floating--right one-half display-inline-block"
                    style={
                      Object {
                        "verticalAlign": "middle",
                      }
                    }>
                    <Currency
                      amount={66}
                      baseHeadingSize="4"
                      className="floating__item text-right"
                      roundCurrency={true}
                      theme="light">
                      <div
                        className="floating text-light-primary floating__item text-right">
                        <h6
                          className="floating__item flush"
                          style={
                            Object {
                              "paddingRight": "5px",
                            }
                          }>
                          $
                        </h6>
                        <h4
                          className="floating__item flush">
                          66
                        </h4>
                      </div>
                    </Currency>
                  </div>
                  <Progress
                    percentDone={100}>
                    <div
                      className="one-whole"
                      style={
                        Object {
                          "backgroundColor": "#2a4930",
                          "height": "6px",
                        }
                      }>
                      <div
                        style={
                          Object {
                            "backgroundColor": "white",
                            "height": "100%",
                            "width": "100%",
                          }
                        } />
                    </div>
                  </Progress>
                </div>
              </Progress>
            </div>
          </div>
        </FundBreakdown>
      </div>
    </div>
  </div>
</RightPanel>
`;
